<resources>
    <string name="app_name">Niar</string>
    <string name="logo_text">Niar</string>
    <string name="logo_text_UP">NIAR</string>
    <string name="hint_user_field">Введите название города</string>
    <string name="main_button">Узнать погоду</string>
    <string name="error_userfield">Введите текст</string>
    <string name="city_example">Nizhnekamsk</string>
    <string name="temp_example">10°</string>
    <string name="error">Ошибка</string>
    <string name="wind">Ветер</string>
</resources>