<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/siren"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/logo_text"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/persik"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:hint="@string/hint_user_field"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_field"
        android:layout_marginHorizontal="130sp"
        android:layout_marginTop="25sp"
        android:backgroundTint="@color/persik"
        android:hint="@string/main_button"
        android:textColorHint="@color/white"
        app:cornerRadius="@android:dimen/thumbnail_width" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_below="@+id/main_button"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/weather_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/result_info"
        android:layout_marginTop="100sp" />

</RelativeLayout>